fix time align

--- a/resources/assets/sass/pageEvent.sass
+++ b/resources/assets/sass/pageEvent.sass
@@ -119,10 +119,6 @@
         
       
     .timeline
-      +rwd_sm
-        padding-left: 50px
-        margin-top: 30px
-
       li
         display: flex
         border-left: 1px solid white
@@ -137,11 +133,11 @@
           left: -5px
           top: 10px
           border-radius: 50%
-
         .time
           font-size: 20px
           margin-right: 15px
           font-style: italic
+          min-width: 100px
         .content
           font-size: 18px
           cursor: pointer
@@ -150,7 +146,6 @@
           p
             margin: 0
             +trans
-
         &:hover
           p
             opacity: 0.8
@@ -161,6 +156,17 @@
             &:before
               top: 20px
 
+      +rwd_sm
+        padding-left: 30px
+        margin-left: 20px
+        margin-top: 30px
+        li
+          .time
+            font-size: 18px
+            white-space: nowrap
+            min-width: 90px
+          h4
+            margin-top: 0
       // display: flex
       // flex-direction: column
       // align-items: center
